# lana

./: .env  README.md  main.py  pyproject.toml  requirements.txt  run.py
cogs/: general.py  settings.py
cogs/music/: music.py
src/bot_lana/: bot.py
src/bot_lana.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bot_lana/cogs/: general.py  help.py
src/bot_lana/cogs/music/: player.py  queue.py  settings.py
src/bot_lana/core/: views.py
src/bot_lana/data/: settings.json
